bug fixes like - redirection,reset ,forgot password required validations ui fixes,overlapping issue in reset password,business details validation of add more,add dropdown in personal details etc

--- a/src/app/default/login/login.component.css
+++ b/src/app/default/login/login.component.css
@@ -158,7 +158,7 @@
 .loginbody .inputDiv .ng-invalid + label + .invalid-feedback:after {
     content:none!important;
 }
-select{
+select option{
     color: #545454!important;
 }
 .extralink:hover {
